# vector-mcp-rust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  benchmark_results.md  build_ui.sh  patch_main.patch  patch_main.sh  patch_watcher.patch  patch_watcher.sh  run_audit.sh  usage_guide.md
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
benchmarks/ultimate_audit/: bge-m3-Q8_0.txt  bge-small-en-v1.5.Q8_0.txt  e5-small-v2.Q8_0.txt  gte-Qwen2-1.5B-instruct.Q4_K_M.txt  gte-small.Q8_0.txt  jina-code-embeddings-0.5b-Q8_0.txt  mxbai-embed-large-v1-f16.txt  nomic-embed-text-v1.5.Q4_K_M.txt  qwen2.5-0.5b-instruct-q4_k_m.txt  qwen2.5-coder-0.5b-instruct-q4_k_m.txt
design-system/vector-mcp-rust/: MASTER.md
docs/wiki_plan/: design.md  requirements.md  tasks.md
frontend/: AGENTS.md  CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CodeBlock.tsx  ContextModal.tsx  SearchResultCard.tsx  SearchResultSkeleton.tsx  Sidebar.tsx  ThemeToggle.tsx  ToasterClient.tsx
frontend/src/lib/: shortcuts.ts
samples/: config_manager.py  math_utils.go
scripts/: setup-service.sh  vector-mcp-rust.service
src/: benchmark.rs  main.rs  main.rs.orig
src/api/: mod.rs
src/config/: mod.rs
src/daemon/: master.rs  mod.rs  slave.rs
src/db/: graph.rs  mod.rs
src/indexer/: chunker.rs  mod.rs  scanner.rs  watcher.rs
src/llm/: embedding.rs  gemini.rs  kv_cache.rs  mod.rs  models.rs  summarizer.rs  util.rs  worker.rs
src/lsp/: mod.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  router.rs  server.rs  sse.rs  tools.rs
src/mutation/: mod.rs  write_log.rs
src/security/: mod.rs  pathguard.rs  ratelimit.rs
