[package]
name = "vector-mcp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
lancedb = "0.27.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
arrow-schema = "57"
arrow-array = "57"
tree-sitter = "0.25"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-php = "0.23"
tree-sitter-rust = "0.23"
regex = "1"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
tokenizers = "0.21"
candle-core = "0.9.2"
candle-transformers = "0.9.2"
hf-hub = "0.3"
notify = "6.1"
tokio-stream = "0.1"
lance-arrow = "3.0.1"
futures = "0.3"
pdf-extract = "0.7"
ignore = "0.4"
