[package]
name = "vector-mcp-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
default-run = "vector-mcp-rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
lancedb = "0.27.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15"
arrow-schema = "57"
arrow-array = "57"
tree-sitter = "0.25"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-php = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23.2"
regex = "1"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
tokenizers = "0.21"
candle-core = "0.9.2"
candle-transformers = "0.9.2"
hf-hub = "0.3"
notify = "6.1"
tokio-stream = "0.1"
lance-arrow = "3.0.1"
futures = "0.3"
pdf-extract = "0.7"
ignore = "0.4"
walkdir = "2"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6.1.0"
tiktoken-rs = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
tantivy = "0.24.2"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
opentelemetry-semantic-conventions = "0.31.0"
tonic = "0.14.5"
prost = "0.14.3"
turbo-quant = "0.1.0"
bincode = "1.3.3"

[features]
cuda = ["ort/cuda"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
